--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yt_trancript_to_img",
+  "name": "yt_transcript_to_img",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Luks17/YT_Trancript_to_img.git"
+    "url": "git+https://github.com/Luks17/YT_Transcript_to_img.git"
   },
   "author": "Luks17",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Luks17/YT_Trancript_to_img/issues"
+    "url": "https://github.com/Luks17/YT_Transcript_to_img/issues"
   },
-  "homepage": "https://github.com/Luks17/YT_Trancript_to_img#readme",
+  "homepage": "https://github.com/Luks17/YT_Transcript_to_img#readme",
   "devDependencies": {
     "nodemon": "^2.0.16"
   },
