--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "googleapis": "^104.0.0",
     "mongoose": "^6.4.1",
     "youtube-dl-exec": "^2.0.12"
   }
